k8s/debezium-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: debezium
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium
  namespace: debezium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debezium
  template:
    metadata:
      labels:
        app: debezium
    spec:
      containers:
      containers:
      - image: debezium/connect:2.4.1.Final
        name: debezium
        ports:
        - containerPort: 8083
        #livenessProbe:
        #  exec:
        #    command:
            #- 'CMD'
        #    - 'curl'
        #    - '--silent'
        #    - '--fail'
        #    - '-X'
        #    - 'GET'
        #    - 'http://localhost:8083/connectors'
        #  initialDelaySeconds: 5
        #  periodSeconds: 5
        #  timeoutSeconds: 5
