k8s/kafka-ui-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      containers:
      - image: provectuslabs/kafka-ui:latest
        name: kafka-ui
        ports:
        - containerPort: 8080
