k8s/pgadmin-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: postgresql
  name: pgadmin
  labels:
    app: pgadmin
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: http
    name: pgadmin
  clusterIP: None
  selector:
    app: pgadmin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin
  namespace: postgresql
  labels:
    app: "pgadmin"
spec:
  serviceName: "pgadmin"
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:8.6
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: data
          mountPath: /var/lib/pgadmin
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pgadmin
