k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kafka
  name: minimal-ingress
spec:
  ingressClassName: nginx-example
  rules:
  - host: event-based-processing.local
    http:
      paths:
      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8080
      # - path: /pgadmin
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: pgadmin
      #       port:
      #         number: 8082
